--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,18 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.3.0'
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
+        jcenter()
+
     }
 }
