--- a/Smart Proxy X/src/main/AndroidManifest.xml
+++ b/Smart Proxy X/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
 
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTask"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            android:theme="@android:style/Theme.Material.NoActionBar"
+            android:launchMode="singleInstance"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
