--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,8 @@
 
 buildscript {
     repositories {
-        mavenCentral()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
-
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
@@ -17,12 +12,7 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenCentral()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
-
+        google()
     }
 }
