--- a/OneKeyAndroid/build.gradle
+++ b/OneKeyAndroid/build.gradle
@@ -30,12 +30,26 @@ android {
     productFlavors {
     }
 
-    android.applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-//            output.outputFile = new File(output.outputFile.parent, defaultConfig.applicationId + "-" + buildType.name + "-v" +
-//                    defaultConfig.versionName + "-" + defaultConfig.versionCode + ".apk" );
-//            output.outputFile = new File(output.outputFile.parent, "onekey.apk");
-        }
+    android.applicationVariants.all {
+            //        variant.outputs.each { output ->
+////            output.outputFile = new File(output.outputFile.parent, defaultConfig.applicationId + "-" + buildType.name + "-v" +
+////                    defaultConfig.versionName + "-" + defaultConfig.versionCode + ".apk");
+//            output.outputFile = new File(output.outputFile.parent, "lixi-onekey-" +
+//                    defaultConfig.versionName + "-" + defaultConfig.versionCode + "-"
+//                    + new Date().format("yyyy-MM-dd-HH:mm:ss").toString() + ".apk");
+////            output.outputFile = new File(output.outputFile.parent, "onekey.apk");
+//
+//
+//        }
+        variant ->
+            variant.outputs.all {
+                //在这里修改apk文件名
+//                outputFileName = "lixi-onekey-" +
+//                        defaultConfig.versionName + "-" + defaultConfig.versionCode + "-"
+//                +new Date().format("yyyy-MM-dd-HH:mm:ss").toString() + ".apk"
+
+                outputFileName = "lixi-onekey-proxy-v${variant.versionName}-${new Date().format("yyyy-MM-dd-HH-mm-ss").toString()}.apk"
+            }
     }
 }
 
